# SwitchListener

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindHIDAPI.cmake
libs/: CMakeLists.txt  hidapi.c  mingw.thread.h
src/: AnswerReader.cpp  AnswerReader.h  ConnectionsManager.cpp  ConnectionsManager.h  Controller.cpp  Controller.h  HidComm.cpp  HidComm.h  HidScanner.cpp  HidScanner.h  Interface.cpp  Interface.h  ToolkitManager.cpp  ToolkitManager.h  main.cpp
tools/: CMakeLists.txt  ListHIDDevice.c  RulesChecker.c  ScanEvdevDevices.py
